objects/FieloCRUD__RelatedView__c.object
<CustomObject>
    <fields>
        <fullName>FieloCRUD__ListView__c</fullName>
        <label>List View</label>
        <referenceTo>FieloCRUD__ListView__c</referenceTo>
        <relationshipLabel>Related Views</relationshipLabel>
        <relationshipName>RelatedViews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__RelatedView__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related View</label>
        <referenceTo>FieloCRUD__ListView__c</referenceTo>
        <relationshipLabel>Related List Views</relationshipLabel>
        <relationshipName>ListViews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ViewName__c</fullName>
        <formula>IF(
	ISBLANK(FieloCRUD__RelatedView__r.FieloCRUD__ViewName__c),
	FieloCRUD__RelatedView__r.Name,
	FieloCRUD__RelatedView__r.FieloCRUD__ViewName__c
)</formula>
        <label>View Name</label>
        <type>Text</type>
    </fields>
    <label>Related View</label>
    <nameField>
        <displayFormat>RN-{00000}</displayFormat>
        <label>Related View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>